--- a/client/src/feacher/contact/contact.css
+++ b/client/src/feacher/contact/contact.css
@@ -26,7 +26,7 @@
   transition: width 0.5s, height 0.5s, opacity 0.5s 0.5s;
 }
 
-.ccard {
+.formcls {
   max-width: 80%;
   max-height: 100%;
   align-content: right;
